--- a/src/styles.css
+++ b/src/styles.css
@@ -15,9 +15,14 @@ css
        padding-right: 13px;
      }
 
-     .para, .part, .part-label, .button-primary, .head-input{
+     .para, .part, .part-label, .button-primary, .head-input, .toggle {
        font-size: 3vw !important;
      }
+}
+
+.part-label,  body, .button-primary, .head-input {
+    font-family: "Inconsolata", monospace !important;
+    font-size: 12pt;
 }
 
 html, body, .row {
@@ -26,11 +31,6 @@ html, body, .row {
 
 .container {
     padding-bottom: 4vh;
-}
-
-.part-label,  body, .button-primary, .head-input {
-    font-family: "Inconsolata", monospace !important;
-    font-size: 12pt;
 }
 
 .button-primary {
@@ -74,9 +74,28 @@ html, body, .row {
     padding: 0.5vw;
 }
 
-.part:focus, .para:focus, .button-primary:hover, .button-primary.zeroclipboard-is-hover, .head-input:focus {
+.toggle {
+    transition: border .5s, box-shadow .5s;
+    border-color: #33C3F0;
+    font-size: 12pt;
+    margin-bottom: 12px;
+}
+
+#preview {
+    display: none;
+}
+
+.part:focus, .para:focus, .button-primary:hover, .button-primary.zeroclipboard-is-hover, .head-input:focus, .toggle:hover {
     border: 1px solid #17dbdb;
     -webkit-box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
     -moz-box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
     box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
+}
+
+.toggle-on:hover {
+    background-color: #1EAEDB;
+}
+
+.toggle-on {
+    background-color: #33C3F0;
 }
