--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ html, body, .row {
   transition: border .5s, box-shadow .5s;
 }
 .para, .part {
-  border: 1px solid initial;
+  border: 1px solid rgb(169, 169, 169);;
   outline: none;
   -webkit-transition: border .5s, box-shadow .5s;
   transition: border .5s, box-shadow .5s;
